fixed find and replace errors with overlapping substrings

--- a/src/scss/gtk-3.0/widgets/_popover.scss
+++ b/src/scss/gtk-3.0/widgets/_popover.scss
@@ -1,7 +1,7 @@
 @use '../colors';
 
 popover {
-  background: colors.$base03est;
+  background: colors.$base03;
   box-shadow: 0 0 5px colors.$black-moderate;
   border-radius: 0.5em;
   padding: 0.5em;
